css file created

--- a/index.html
+++ b/index.html
@@ -4,10 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        h1{
+            color: red;
+            background-color: aqua;
+        }
+    </style>
+    
 </head>
 <body>
     <h1>
         i am robot .
     </h1>
+    <div>
+        <h1>
+            <a href="www.google.com" style="color: rgb(255, 0, 0); text-decoration: none; background-color: rgb(123, 173, 145);">I AM GOOGLE LINK </a>
+        </h1>
+    </div>
 </body>
 </html>
